--- a/app/src/main/res/drawable/custom_progressbar.xml
+++ b/app/src/main/res/drawable/custom_progressbar.xml
@@ -4,16 +4,16 @@
     <item android:id="@android:id/background">
         <shape>
             <gradient
-                android:startColor="#FAFAFA"
-                android:centerColor="#FAFAFA"
+                android:startColor="@color/lightWhite"
+                android:centerColor="@color/lightWhite"
                 android:centerY="1.0"
-                android:endColor="#FAFAFA"
+                android:endColor="@color/lightWhite"
                 android:angle="270"
                 />
             <stroke
-                android:width="1dp"
-                android:color="#E0E0E0" />
-            <corners android:radius="10dp" />
+                android:width="@dimen/singleBorder"
+                android:color="@color/lightGray" />
+            <corners android:radius="@dimen/mediumCornerRadius" />
         </shape>
     </item>
 
@@ -22,16 +22,16 @@
         <clip>
             <shape>
                 <gradient
-                    android:startColor="#007A00"
-                    android:centerColor="#007A00"
+                    android:startColor="@color/green"
+                    android:centerColor="@color/green"
                     android:centerY="1.0"
-                    android:endColor="#FAFAFA"
+                    android:endColor="@color/lightWhite"
                     android:angle="270"
                     />
                 <stroke
-                    android:width="1dp"
-                    android:color="#E0E0E0" />
-                <corners android:radius="10dp" />
+                    android:width="@dimen/singleBorder"
+                    android:color="@color/lightGray" />
+                <corners android:radius="@dimen/mediumCornerRadius" />
             </shape>
         </clip>
     </item>
