--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="singleBorder">1dp</dimen>
+    <dimen name="smallCornerRadius">5dp</dimen>
+    <dimen name="mediumCornerRadius">10dp</dimen>
 </resources>
