--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,47 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="item_level_textView_level_title">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/item.level.textView.levelTitle.textSize</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingTop">@dimen/medium_padding</item>
+        <item name="android:paddingLeft">@dimen/medium_padding</item>
+        <item name="android:paddingRight">@dimen/medium_padding</item>
+        <item name="android:paddingBottom">@dimen/item.level.textView.levelTitle.paddingBottom</item>
+    </style>
+
+    <style name="item_textView_study">
+        <item name="android:padding">10dp</item>
+        <item name="android:background">@drawable/shape_rounded_layout_background_bottom</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textSize">16dp</item>
+    </style>
+
+    <style name="item_textView_top_title">
+        <item name="android:textSize">@dimen/item.textView.topTitle.textSize</item>
+        <item name="android:padding">@dimen/default_padding</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="item_topic_textView_topicTitle">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/item.topic.textView.topicTitle.textSize</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingTop">@dimen/medium_padding</item>
+        <item name="android:paddingLeft">@dimen/medium_padding</item>
+        <item name="android:paddingRight">@dimen/medium_padding</item>
+        <item name="android:paddingBottom">@dimen/item.topic.textView.topicTitle.paddingBottom</item>
+    </style>
+
+    <style name="item_newTest_textView_testTitle">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/item.newTest.textView.testTitle.testSize</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingTop">@dimen/medium_padding</item>
+        <item name="android:paddingLeft">@dimen/medium_padding</item>
+        <item name="android:paddingRight">@dimen/medium_padding</item>
+        <item name="android:paddingBottom">@dimen/item.newTest.textView.testTitle.paddingBottom</item>
+    </style>
+
 </resources>
