--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,10 +19,10 @@
     </style>
 
     <style name="item_textView_study">
-        <item name="android:padding">10dp</item>
+        <item name="android:padding">@dimen/default_padding</item>
         <item name="android:background">@drawable/shape_rounded_layout_background_bottom</item>
         <item name="android:gravity">center_horizontal</item>
-        <item name="android:textSize">16dp</item>
+        <item name="android:textSize">@dimen/item.textView.study.textSize</item>
     </style>
 
     <style name="item_textView_top_title">
