Change icons folder, change fixed values

--- a/app/src/main/res/layout/item_topic.xml
+++ b/app/src/main/res/layout/item_topic.xml
@@ -38,6 +38,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/txtStudyTopic"
         style="@style/item_textView_study"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
