--- a/app/src/main/res/drawable/shape_rounded_layout_background_top.xml
+++ b/app/src/main/res/drawable/shape_rounded_layout_background_top.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/white"></solid>
-    <corners android:topLeftRadius="5dp" android:topRightRadius="5dp" />
+    <corners android:topLeftRadius="@dimen/shape.rounded_background.small_radius" android:topRightRadius="@dimen/shape.rounded_background.small_radius" />
     <padding
         android:bottom="3dp"
         android:left="1dp"
