--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,9 @@
     <dimen name="default_margin">10dp</dimen>
     <dimen name="medium_margin">16dp</dimen>
 
+    <!-- shape -->
+    <dimen name="shape.rounded_background.small_radius">5dp</dimen>
+
     <!-- progressbar -->
     <dimen name="progressbar.border.single_border">1dp</dimen>
     <dimen name="progressbar.corner.small_radius">5dp</dimen>
