--- a/app/src/main/res/drawable/shape_rounded_layout_background_bottom.xml
+++ b/app/src/main/res/drawable/shape_rounded_layout_background_bottom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#E0E0E0"></solid>
-    <corners android:bottomLeftRadius="5dp" android:bottomRightRadius="5dp" />
+    <corners android:bottomLeftRadius="@dimen/shape.rounded_background.small_radius" android:bottomRightRadius="@dimen/shape.rounded_background.small_radius" />
     <padding
         android:bottom="3dp"
         android:left="1dp"
