--- a/app/src/main/res/drawable/shape_rounded_layout_background_bottom.xml
+++ b/app/src/main/res/drawable/shape_rounded_layout_background_bottom.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#E0E0E0"></solid>
-    <corners android:bottomLeftRadius="@dimen/shape.rounded_background.small_radius" android:bottomRightRadius="@dimen/shape.rounded_background.small_radius" />
+    <corners
+        android:bottomLeftRadius="@dimen/shape.rounded_background.small_radius"
+        android:bottomRightRadius="@dimen/shape.rounded_background.small_radius" />
     <padding
-        android:bottom="3dp"
-        android:left="1dp"
-        android:right="1dp"
-        android:top="1dp"></padding>
+        android:bottom="@dimen/shape.paddingBottom"
+        android:left="@dimen/shape.defaultPadding"
+        android:right="@dimen/shape.defaultPadding"
+        android:top="@dimen/shape.defaultPadding"/>
 </shape>
