--- a/app/src/main/res/drawable/shape_rounded_layout_background_top.xml
+++ b/app/src/main/res/drawable/shape_rounded_layout_background_top.xml
@@ -3,8 +3,8 @@
     <solid android:color="@color/white"></solid>
     <corners android:topLeftRadius="@dimen/shape.rounded_background.small_radius" android:topRightRadius="@dimen/shape.rounded_background.small_radius" />
     <padding
-        android:bottom="3dp"
-        android:left="1dp"
-        android:right="1dp"
-        android:top="1dp"></padding>
+        android:bottom="@dimen/shape.paddingBottom"
+        android:left="@dimen/shape.defaultPadding"
+        android:right="@dimen/shape.defaultPadding"
+        android:top="@dimen/shape.defaultPadding"/>
 </shape>
