--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,8 +11,8 @@
 
     <!-- shape -->
     <dimen name="shape.rounded_background.small_radius">5dp</dimen>
-    <dimen name="shape.defaultPadding">1dp</dimen>
-    <dimen name="shape.paddingBottom">3dp</dimen>
+    <dimen name="shape.default_padding">1dp</dimen>
+    <dimen name="shape.padding_bottom">3dp</dimen>
 
     <!-- progressbar -->
     <dimen name="progressbar.border.single_border">1dp</dimen>
@@ -20,13 +20,13 @@
     <dimen name="progressbar.corner.medium_radius">10dp</dimen>
 
     <!-- text view -->
-    <dimen name="item.level.textView.levelTitle.textSize">25dp</dimen>
-    <dimen name="item.level.textView.levelTitle.paddingBottom">25dp</dimen>
-    <dimen name="item.textView.topTitle.textSize">20dp</dimen>
-    <dimen name="item.generalHeader.textView.drawablePadding">5dp</dimen>
-    <dimen name="item.topic.textView.topicTitle.textSize">25dp</dimen>
-    <dimen name="item.topic.textView.topicTitle.paddingBottom">10dp</dimen>
-    <dimen name="item.newTest.textView.testTitle.testSize">25dp</dimen>
-    <dimen name="item.newTest.textView.testTitle.paddingBottom">10dp</dimen>
-    <dimen name="item.textView.study.textSize">16dp</dimen>
+    <dimen name="item.level.text_view.level_title.text_size">25dp</dimen>
+    <dimen name="item.level.text_view.level_title.padding_bottom">25dp</dimen>
+    <dimen name="item.text_view.top_title.text_size">20dp</dimen>
+    <dimen name="item.general_header.text_view.drawable_padding">5dp</dimen>
+    <dimen name="item.topic.text_view.topic_title.text_size">25dp</dimen>
+    <dimen name="item.topic.text_view.topic_title.padding_bottom">10dp</dimen>
+    <dimen name="item.newtest.text_view.test_title.test_size">25dp</dimen>
+    <dimen name="item.newtest.text_view.test_title.padding_bottom">10dp</dimen>
+    <dimen name="item.text_view.study.text_size">16dp</dimen>
 </resources>
