--- a/app/src/main/res/drawable/shape_rounded_layout_background_bottom.xml
+++ b/app/src/main/res/drawable/shape_rounded_layout_background_bottom.xml
@@ -5,8 +5,8 @@
         android:bottomLeftRadius="@dimen/shape.rounded_background.small_radius"
         android:bottomRightRadius="@dimen/shape.rounded_background.small_radius" />
     <padding
-        android:bottom="@dimen/shape.paddingBottom"
-        android:left="@dimen/shape.defaultPadding"
-        android:right="@dimen/shape.defaultPadding"
-        android:top="@dimen/shape.defaultPadding"/>
+        android:bottom="@dimen/shape.padding_bottom"
+        android:left="@dimen/shape.default_padding"
+        android:right="@dimen/shape.default_padding"
+        android:top="@dimen/shape.default_padding"/>
 </shape>
