--- a/app/src/main/res/layout/item_new_test.xml
+++ b/app/src/main/res/layout/item_new_test.xml
@@ -12,14 +12,14 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/txtTestTitle"
+            android:id="@+id/tvTestTitle"
             style="@style/item_newTest_textView_testTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical" />
 
         <TextView
-            android:id="@+id/txtTotalQuestion"
+            android:id="@+id/tvTotalQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
