--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,4 +51,29 @@
         <item name="android:paddingBottom">@dimen/item.newtest.text_view.test_title.padding_bottom</item>
     </style>
 
+    <style name="textview_answer_option">
+        <item name="android:padding">@dimen/default_padding</item>
+        <item name="android:background">@color/colorWhite</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">@dimen/textview.answer_option_text_size</item>
+    </style>
+
+    <style name="textview_right_answer">
+        <item name="android:drawableLeft">@drawable/ic_right_answer</item>
+        <item name="android:padding">@dimen/default_padding</item>
+        <item name="android:background">@color/colorDimGreen</item>
+        <item name="android:textColor">@color/colorGreen</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">@dimen/textview.answer_option_text_size</item>
+    </style>
+
+    <style name="textview_wrong_answer">
+        <item name="android:drawableLeft">@drawable/ic_user_red</item>
+        <item name="android:padding">@dimen/default_padding</item>
+        <item name="android:background">@color/colorDimRed</item>
+        <item name="android:textColor">@color/colorRed</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">@dimen/textview.answer_option_text_size</item>
+    </style>
+
 </resources>
