--- a/app/src/main/res/layout/textview_answer_option.xml
+++ b/app/src/main/res/layout/textview_answer_option.xml
@@ -2,5 +2,4 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/textview_answer_option"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Answer option" />
+    android:layout_height="wrap_content" />
