Create confirm review result, review result layout and update layout

--- a/app/src/main/res/layout/item_general_header.xml
+++ b/app/src/main/res/layout/item_general_header.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/tvGeneralHeaderTitle"
+    android:id="@+id/tvHeaderTitle"
     style="@style/item_textView_top_title"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
