--- a/app/src/main/res/layout/activity_container.xml
+++ b/app/src/main/res/layout/activity_container.xml
@@ -8,18 +8,28 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarMain"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/toolbar.height"
+        android:layout_height="?attr/actionBarSize"
         android:background="@color/colorDarkPurple"
         android:elevation="@dimen/toolbar.elevation"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:subtitleTextColor="@color/colorWhite"
-        app:titleTextColor="@color/colorWhite" />
+        app:titleTextColor="@color/colorWhite">
+
+        <ImageView
+            android:id="@+id/imgNavigation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_margin="@dimen/default_margin"
+            android:src="@drawable/ic_menu_white" />
+
+    </android.support.v7.widget.Toolbar>
 
     <FrameLayout
         android:id="@+id/flContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
 
