--- a/app/src/main/res/layout/activity_review_result.xml
+++ b/app/src/main/res/layout/activity_review_result.xml
@@ -18,18 +18,11 @@
             android:drawableLeft="@drawable/ic_left_arrow_white"
             android:drawablePadding="@dimen/item.general_header.text_view.drawable_padding" />
 
-        <ProgressBar
-            android:id="@+id/progressBarAnsweringProgress"
-            style="?android:attr/progressBarStyleHorizontal"
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPageResult"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/default_margin"
-            android:layout_marginRight="@dimen/default_margin" />
+            android:layout_height="match_parent" />
 
-        <FrameLayout
-            android:id="@+id/flQuestionDetailContainer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
     </LinearLayout>
-</ScrollView>
 
+</ScrollView>
