--- a/app/src/main/res/layout/fragment_question_detail.xml
+++ b/app/src/main/res/layout/fragment_question_detail.xml
@@ -7,7 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/default_padding">
 
         <TextView
             android:id="@+id/tvQuestionInstruction"
