--- a/app/src/main/res/layout/fragment_question_result.xml
+++ b/app/src/main/res/layout/fragment_question_result.xml
@@ -7,12 +7,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/default_padding">
 
         <FrameLayout
             android:id="@+id/flResultTitleContainer"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
         <View
             android:layout_width="match_parent"
