--- a/app/src/main/res/layout/fragment_test_result.xml
+++ b/app/src/main/res/layout/fragment_test_result.xml
@@ -2,14 +2,13 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorDarkPurple"
-    android:fillViewport="true"
-    android:padding="@dimen/default_padding">
+    android:fillViewport="true">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/default_padding">
 
         <TextView
             style="@style/item_textView_study"
@@ -131,12 +130,11 @@
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/btnFinish"
+        <TextView
+            android:id="@+id/tvFinish"
             style="@style/item_textView_study"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/shape_rounded_layout_background_bottom"
             android:text="@string/fragment.testResult.button.finish"
             android:textAllCaps="false"
             android:textColor="@color/colorBlack" />
@@ -144,3 +142,4 @@
     </LinearLayout>
 
 </ScrollView>
+
