--- a/app/src/main/res/layout/dialog_confirm_review_result.xml
+++ b/app/src/main/res/layout/dialog_confirm_review_result.xml
@@ -32,7 +32,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/line.single_line"
         android:background="@color/colorGray" />
 
     <LinearLayout
@@ -49,7 +49,7 @@
             android:text="@string/dialog.confirmReviewResult.button.reviewResult" />
 
         <View
-            android:layout_width="1dp"
+            android:layout_width="@dimen/line.single_line"
             android:layout_height="match_parent"
             android:background="@color/colorGray" />
 
