Create splash screen and custom font

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -48,4 +48,9 @@
 
     <!-- dialog -->
     <dimen name="dialog.default.title">20dp</dimen>
+
+    <!-- splash scree -->
+    <dimen name="splashScreen.textView.appName.textSize">40dp</dimen>
+    <dimen name="splashScreen.textView.loadStatus.textSize">16dp</dimen>
+
 </resources>
